--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -25,3 +25,14 @@
 .card-info p {
   margin: 0;
 }
+
+.close {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  padding: 10px 20px 15px 20px;
+}
+
+.close:hover {
+  color: white;
+}
