--- a/src/components/ControlInterface.css
+++ b/src/components/ControlInterface.css
@@ -13,7 +13,8 @@
 .form-group input {
   border: none;
   padding: 5px;
-  margin-right: 10px
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 .button {
@@ -22,3 +23,7 @@
   border: none;
   padding: 10px 40px;
 }
+
+/* .form-row {
+  margin-bottom: 5px;
+} */
